feat(mobile): Integrate STOMP WebSocket & synchronize analytical APIs